Revision history for Perl extension Statistics::R.

0.xx  xxxx-xx-xx
    - Better way to set large arrays (patch by Ken Yamaguchi, RT #97359)

0.32  2013-12-18 
    - Fixed POD error (reported by Srividya Vaidyanathan, RT #91438)

0.31  2013-02-07
    - Simplification and speedup of communications with R
    - Handle multiple locales when looking for errors (patch by Jean Véronis and
      Brian Cassidy)

0.30  2012-11-15
    - Skip tests that hang on Windows (thanks Clifford Sobchuk and Gisbert W.
      Selke, RT #77761)
    - Automatically destroy the R bridge when Statistics::R goes out of scope
      (unless running in shared mode)

0.29  2012-11-07
    - Fixed cross-platform filename problem in run_from_file (thanks Clifford
      Sobchuk, RT #77761)

0.28  2012-11-06
    - Fixed packaging issue by repackaging with Module::Install version 1.06
    - Fixed character causing failure of POD test

0.27  2012-03-22
    - Better handling of R line length limits
    - Better quoting of strings passed to R
    - Optimizations
    
0.26  2012-01-28
    - Support more R installation paths in Windows (patch by Adam Kennedy)

0.25  2011-12-21
    - Fixed a bug in the get() method (reported by Manuel A. Alonso Tarajano,
      patched by Brian Cassidy)

0.24  2011-11-09
    - Require Text::Balanced >= 0.97 to prevent bad surprises (reported by Ryan
      Golhar)

0.23  2011-10-28
    - Arrays of number-containing strings are now handled properly (RT bug 
      #71988, patch by dheiman)

0.22  2011-10-09
    - The run() method now accepts an array of strings as input
    - New run_from_file() method to read and execute commands from an R file
    - Better detection of R errors by using the R exception system (issue
      reported by Mike Imelfort)
    - Updated error handling mechanism to detect R syntax errors in addition
      to R runtime errors
    - Tests now work for different locales (issue reported by Knut Behrends)

0.21  2011-09-04